force-app/main/default/objects/Professional_Profile__c/Professional_Profile__c.object-meta.xml
<CustomObject>
    <label>Professional Profile</label>
    <nameField>
        <label>Professional Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>