force-app/main/default/objects/Professional_Profile__c/fields/Mentee__c.field-meta.xml
<CustomField>
    <fullName>Mentee__c</fullName>
    <inlineHelpText>Identify if this contact is an active mentee seeking for mentorship</inlineHelpText>
    <label>Mentee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>