force-app/main/default/objects/Professional_Profile__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <inlineHelpText>Identify if this contact is an active mentor engaging with mentees</inlineHelpText>
    <label>Mentor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>