force-app/main/default/objects/Professional_Profile__c/fields/SF_Administrator__c.field-meta.xml
<CustomField>
    <fullName>SF_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Salesforce Certified Administrator</inlineHelpText>
    <label>SF Administrator</label>
    <type>Checkbox</type>
</CustomField>