force-app/main/default/objects/Professional_Profile__c/fields/Supporter__c.field-meta.xml
<CustomField>
    <fullName>Supporter__c</fullName>
    <inlineHelpText>Identify if this contact can provide financial support or share network of professionals and resources</inlineHelpText>
    <label>Supporter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>